Attempt to fix iphone flicker of nav bar

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -887,10 +887,14 @@ input.normal, select.normal, textarea.normal {
 
 @media only screen and (min-width: 320px) and (max-width:991px) {
 	
+	header {
+		-webkit-backface-visibility: hidden;
+	}
+
 	.joinourParty {
 		margin-bottom: 50px;
 	}
-	
+
 	.registryMessage {
 		margin: 0 0 0; 
 		text-align: center;
